--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "clsx": "^2.0.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "tailwind-merge": "^1.14.0"
   },
