--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@reduxjs/toolkit": "^1.9.5",
+    "async-mutex": "^0.4.0",
     "clsx": "^2.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.263.1",
