--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
