--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "async-mutex": "^0.4.0",
     "clsx": "^2.0.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
+    "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
