--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "async-mutex": "^0.4.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.263.1",
