--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "react-stars": "^2.2.5",
     "react-toastify": "^9.1.3",
+    "setimmediate": "^1.0.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -47,6 +50,8 @@
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-draft-wysiwyg": "^1.13.8",
+    "@types/react-stars": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
