--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.0",
     "cmdk": "0.2.1",
     "dotenv": "^16.3.1",
+    "embla-carousel-react": "^8.0.2",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.372.0",
