--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_SERVER_ENDPOINT = http://localhost:5000
 
-REACT_APP_BASE_URL = https://bookend-awalho.vercel.app/api/v1
+REACT_APP_API_URL=http://localhost:5000/api/v1
